--- a/IntroductionToPython/04-BasicInputAndOutput.ipynb
+++ b/IntroductionToPython/04-BasicInputAndOutput.ipynb
@@ -414,6 +414,8 @@
    "source": [
     "As you find and fix issues, several strategies exist:\n",
     "\n",
+    "**Replicate:** In more complex situations, replicating a particular issue can be challenge in and of itself.  Usually though, replication is the most important task. Once an issue can be replicate, you can understand the inputs and other ancillary factors that led to the problem. \n",
+    "\n",
     "**Read:** Read your source code. Walk through it mentally.  Does the code execute the way you intended? \n",
     "\n",
     "**Run:** Execute your code. Step through your code with a debugger or add print statements to the code to print the current state of the program.  Experiment with running slightly different versions to see what occurs. This strategy is not to randomly try a bunch of different things (e.g., throwing something at a wall until it sticks), but rather to systematically investigate an issue.\n",
