--- a/IntroductionToPython/05-Control.ipynb
+++ b/IntroductionToPython/05-Control.ipynb
@@ -325,10 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f4c9d1ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Close location and I like the salary, but I NEED coffee\n"
+     ]
+    }
+   ],
    "source": [
     "salary = 60000\n",
     "commute_time_min = 30\n",
@@ -350,6 +358,8 @@
    "id": "2c726aef",
    "metadata": {},
    "source": [
+    "[Step through code on PythonTutor.com](https://pythontutor.com/render.html#code=salary%20%3D%2060000%0Acommute_time_min%20%3D%2030%0Afree_coffee%20%3D%20False%0Aif%20salary%20%3E%2050000%3A%0A%20%20%20%20if%20commute_time_min%20%3C%2060%3A%0A%20%20%20%20%20%20%20%20if%20free_coffee%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20print%28%22Cool.%20%20I'm%20going%20to%20like%20this%20job%22%29%0A%20%20%20%20%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20%20%20%20%20print%28%22Close%20location%20and%20I%20like%20the%20salary,%20but%20I%20NEED%20coffee%22%29%0A%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20print%28%22I%20don't%20want%20to%20drive%20that%20far%22%29%0Aelse%3A%0A%20%20%20%20print%28%22I'm%20worth%20more%20than%20that%22%29&cumulative=false&curInstr=0&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)\n",
+    "\n",
     "While it may have seemed frustrating to produce each of these outputs, this is an essential component of testing - following each of the different paths our program can follow.\n",
     "\n",
     "The follow table shows the different possibilities.  Notice that we only listed a couple of different values for `salary` and `commute_time_min`.  Our program's logic creates equivalence classes for these variables.  Any `salary` value less than or equal to 50,000 is in one class, and any value greater than 50,000 is in another equivalence class.  Similarly, any value for `commute_time_min` < 60 is in one class and all of the other values are in another class.  `free_coffee` only has two possibilities.\n",
