--- a/IntroductionToPython/15.5-Recursion.ipynb
+++ b/IntroductionToPython/15.5-Recursion.ipynb
@@ -250,7 +250,32 @@
    "id": "d32256b4",
    "metadata": {},
    "source": [
-    "[View on PythonTutor](https://pythontutor.com/render.html#code=def%20sum_list%28list_to_sum%29%3A%0A%20%20%20%20if%20len%28list_to_sum%29%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%200%0A%20%20%20%20%0A%20%20%20%20current_value%20%3D%20list_to_sum%5B0%5D%0A%20%20%20%20recursive_value%20%3D%20sum_list%28list_to_sum%5B1%3A%5D%29%0A%20%20%20%20result%20%3D%20current_value%20%2B%20recursive_value%0A%20%20%20%20return%20result%0A%0Aprint%28%22%5B1,2,3%5D%3A%22,%20sum_list%28%5B1,2,3%5D%29%29&cumulative=false&curInstr=0&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)  Note: Intermediary variables added to this example to demonstrate the program's state."
+    "[View on PythonTutor](https://pythontutor.com/render.html#code=def%20sum_list%28list_to_sum%29%3A%0A%20%20%20%20if%20len%28list_to_sum%29%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%200%0A%20%20%20%20%0A%20%20%20%20current_value%20%3D%20list_to_sum%5B0%5D%0A%20%20%20%20recursive_value%20%3D%20sum_list%28list_to_sum%5B1%3A%5D%29%0A%20%20%20%20result%20%3D%20current_value%20%2B%20recursive_value%0A%20%20%20%20return%20result%0A%0Aprint%28%22%5B1,2,3%5D%3A%22,%20sum_list%28%5B1,2,3%5D%29%29&cumulative=false&curInstr=0&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)  Note: Intermediary variables were added to this example to demonstrate the program's state as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d4ed64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_list(list_to_sum):\n",
+    "    if len(list_to_sum) == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    current_value = list_to_sum[0]\n",
+    "    recursive_value = sum_list(list_to_sum[1:])\n",
+    "    result = current_value + recursive_value\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6ef8a6",
+   "metadata": {},
+   "source": [
+    "Adding intermediary variables like this may help while debugging. By separating and making explicit the different steps, it becomes easier to analyze.  Using a debugger, programmers can step through each line of code and follow the changes made to the variables.  The variable names provide additional context as well."
    ]
   },
   {
