--- a/IntroductionToPython/24-ClassesAndObjects-Inheritance.ipynb
+++ b/IntroductionToPython/24-ClassesAndObjects-Inheritance.ipynb
@@ -8,17 +8,17 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Inheritance\n",
-    "With inheritance, we can create a new class by extending an existing class.  The new class inherits all of the attributes and methods (the members) of the existing class.  We can then add more attributes and/or methods.  We can also modify existing attributes and methods to provide more functionality.\n",
+    "With inheritance, we can create a new class by extending an existing class.  The new class inherits all of the attributes and methods (the members) of the existing class.  We can then add more attributes and/or methods.  We can also modify existing attributes and methods to provide change functionality.\n",
     "\n",
     "As we look around the world, we can find many instances of hierarchy in which specialized classes exist.  For example, the animal taxonomy serves to classify animals into different classes ([taxonomic ranks](https://en.wikipedia.org/wiki/Taxonomic_rank) based upon different attributes and behaviors that animals exist. Planes, cars, and trains are special cases of vehicles.  Circles, triangles, and rectangles are special cases of shapes. You can also view these examples using the phrase \"<i>is-a</i>\".  A train is a vehicle.  A circle is shape. A dog is a mammal.\n",
     "\n",
-    "In object-oriented programming, inheritance creates this \"<i>is-a</i>\" relationship among classes. We create a new class from an existing class.  The existing (original) class is called a parent, superclass, or a base class. The superclass is the more general class.  The new class is called a child, subclass, or derived class.  This new class is the more specialized class.  The subclass becomes specialized through the addition new attributes and/or methods. The subclass can also become more specialized by modifying the existing state or behavior.\n",
+    "In object-oriented programming, inheritance creates this \"<i>is-a</i>\" relationship among classes. We create a new class from an existing class.  The existing (original) class is called a parent, superclass, or a base class. The superclass is the more general class.  The new class is called a child, subclass, or derived class.  This new class is the more specialized class.  The subclass becomes specialized through the addition of new attributes and/or methods. The subclass can also become more specialized by modifying the existing state or behavior.\n",
     "\n",
     "We can also view inheritance as another re-use mechanism [TODO - keep or not?]\n",
     "\n",
-    "In the previous notebook, we defined a BankAccount.  However, many different types of BankAccount exist: checking, savings, money market, brokerage, etc.  We also have transactions that can belong to those different accounts.  Again, though, we have different types of transactions: deposit, withdrawal, transfer, purchase.  Then under deposit transactions, we have additional specialities: check, cash, ACH.  Similar specialties will also exist for the other transaction types.\n",
+    "In the previous notebook, we defined a BankAccount.  However, many different types of bank accounts exist: checking, savings, money market, brokerage, etc.  We also have transactions that can belong to those different accounts.  Again, though, we have different types of transactions: deposit, withdrawal, transfer, purchase.  Then under deposit transactions, we have additional specialities: check, cash, ACH.  Similar specialties will also exist for the other transaction types.\n",
     "\n",
-    "As another example, consider different types of employees that may exist within a corporation.  We have hourly employees who are paid a fixed amount per hour that they work along with a specific multiplier for specialty shifts (holiday, weekend, nights), salaried employees who earn a specific amount per pay period, and commission employees who earn a specific amount per pay period along with a percentage of their gross sales they generate.\n",
+    "As another example, consider different types of employees that may exist within a corporation.  We have hourly employees who are paid a fixed amount per hour that they work along with a specific multiplier for specialty shifts (holiday, weekend, nights), salaried employees who earn a specific amount per pay period, and commission employees who earn a specific amount per pay period along with a percentage of the gross sales they generate.\n",
     "\n",
     "The below diagram is a Unified Modeling Language(UML) class diagram.  These diagrams document classes, their relationships to each other, and the members (attribute and methods) of each class. Each box represents a class.  The top line contains that class name.  The second area in the box contains the attributes and the third area contains the methods.\n",
     "\n",
@@ -30,7 +30,7 @@
    "id": "a46c3c10",
    "metadata": {},
    "source": [
-    "Thee Employee class have three attributes - an ID, a name, and a job title - and no methods defined. The HourlyEmployee class extends the Employee class by adding attributes for the employee's hourly rate and the hours that employee worked for the past pay period.  The HourlyEmployee also adds behavior - a method to compute their pay.  The SalariedEmployee class extends the Employee class by adding an attribute for the employee's periodic pay amount For example, if the employee earns \\\\$120,000 annually, and they are paid twice a month, their periodic pay is \\\\$5,000. The SalariedEmployee class also defines a method to compute pay, but this differs from the HourlyEmployee's behavior.  The Commissioned employee inherits the behavior and attributes of the SalariedEmployee, but add an additional attribute to track their sales over the past pay period.  Their pay calculation will \"override\" the SalariedEmployees pay calculation as they are paid a salary plus a percentage of their gross sales.  "
+    "Thee Employee class have three attributes - an ID, a name, and a job title - and no methods defined. The HourlyEmployee class extends the Employee class by adding attributes for the employee's hourly rate and the hours that employee worked for the past pay period.  The HourlyEmployee also adds behavior - a method to compute their pay.  The SalariedEmployee class extends the Employee class by adding an attribute for the employee's periodic pay amount For example, if the employee earns \\\\$120,000 annually, and they are paid twice a month, their periodic pay is \\\\$5,000. The SalariedEmployee class also defines a method to compute pay, but this differs from the HourlyEmployee's behavior.  The Commissioned employee inherits the behavior and attributes of the SalariedEmployee, but adds an additional attribute to track their sales over the past pay period.  Their pay calculation will \"override\" the SalariedEmployees pay calculation as they are paid a salary plus a percentage of their gross sales.  "
    ]
   },
   {
@@ -175,7 +175,7 @@
     "    class <i>ClassName</i>(<i>ParentClassName</i>):\n",
     "</pre>\n",
     "2. In the initializer, we make a call to the parent class with `super()`.  As we've defined `__init__` in the child class, the corresponding method in the parent class is not automatically called. We need to explicitly call the initializer with the reference to the super class - this ensures the steps to properly initialize the base `Employee` type is performed.  The `__init__` method then continues with setting the attributes specific to instances of `HourlyEmployee`.\n",
-    "3. Note that in the initializer, we explicitly set `__hours_worked` to `None`.  This ensures that the attribute has at least been defined. In `calculate_pay()`, we add a sanity check to our code to make sure that the `hours_worked` has been defined with the `assert` statement. (TODO - may need to reference the assert notebook)\n",
+    "3. Note that in the initializer, we explicitly set `__hours_worked` to `None`.  This ensures that the attribute has at least been defined. In `calculate_pay()`, we add a sanity check to our code to make sure that the `hours_worked` has been defined with the `assert` statement.  Porgammers can place a conditional expression with an `assert` statement. If the expression evaluates to `True`, processing continues normally. If the expression evaluates to `False`, an exception is raised.\n",
     "4. The `HourlyEmployee` class adds additional methods to support the `hourly_rate` and `hours_worked` attributes.\n",
     "5. In addition to the `__init__` method, the `HourlyEmployee` class also overrides the methods for `employee_type` and `calculate_pay`.  By overriding methods, objects of type `HourlyEmployee` will use the behavior for the methods defined within that class itself. Any behavior in the parent class will not be performed unless explicitly called through the `super()` reference.\n",
     "6. You'll notice that the `HourlyEmployee` class did not change the the `__str__` or `__repr__` methods.  In the test code in the following block, you'll notice that when the `__str__` method gets the employee type, it calls the method based upon the actual type. i.e., an instance of `Employee` returns \"unknown\" while an instance of `HourlyEmployee` returns \"hourly\"."
@@ -223,7 +223,7 @@
     "        self.__hours_worked = Decimal(new_hours)               \n",
     "        \n",
     "    def calculate_pay(self):\n",
-    "        assert type(self.hours_worked) == Decimal, \"Hours worked not established\"\n",
+    "        assert type(self.hours_worked) is Decimal, \"Hours worked not established\"\n",
     "        hours = self.hours_worked\n",
     "        overtime_hours = Decimal(0)\n",
     "        if hours > 40:\n",
@@ -465,14 +465,6 @@
     "\n",
     "c = HourlyDumpEmployee(\"Max\",\"System Administrator\",\"54.76\")\n",
     "c.dump()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f5949cb",
-   "metadata": {},
-   "source": [
-    "   "
    ]
   },
   {
