--- a/IntroductionToPython/32-Comprehensions.ipynb
+++ b/IntroductionToPython/32-Comprehensions.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Python has a bit of [syntactic sugar](https://en.wikipedia.org/wiki/Syntactic_sugar) to help create lists, sets, and dictionaries.\n",
     "\n",
-    "While technically not needed, comprehensions allow to create lists from other sequences in a clean and concise manner."
+    "While technically not needed, comprehensions allow programmers to create lists from other sequences in a clean and concise manner."
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## List Comprehension\n",
-    "The typical example to show list comprehensions is first build a list utilizing a for-loop.  For example, is we want to produce a list from 1 to 10, we can use the following code:"
+    "The typical example to show list comprehensions is first building a list utilizing a for-loop.  For example, if we want to produce a list from 1 to 10, we can use the following code:"
    ]
   },
   {
@@ -176,10 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdf15ad9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'e': 3, 'r': 2, 'p': 1, 't': 2, ' ': 8, 'b': 1, 'f': 1, 'm': 1, 'v': 1, 'j': 1, 'z': 1, 'd': 1, 'g': 1, 'i': 1, 'a': 1, 's': 1, 'x': 1, 'y': 1, 'o': 4, 'l': 1, 'u': 2, 'c': 1, 'k': 1, 'w': 1, 'q': 1, 'n': 1, 'h': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"the quick brown fox jumps over the lazy dog\"\n",
     "counts = { letter: s.count(letter) for letter in set(s)} \n",
@@ -201,7 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set(s)"
+    "# print out the contents of set(s) and list(s)\n",
+    "\n",
+    "# print and compare the sizes of set(s) and list(s)\n"
    ]
   },
   {
@@ -214,18 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "24768a9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2: 't', 1: 'f', 3: 'e', 8: ' ', 4: 'o'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "flipped = { value : key for key, value in counts.items()}\n",
     "print(flipped)"
@@ -244,18 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e71c3f51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['5', '6', '7.023', '3.14']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nlist = [5,6,7.023,3.14,]\n",
     "alist = [str(n) for n in nlist]\n",
@@ -277,7 +271,7 @@
    "source": [
     "## Notes\n",
     "1. Only mutable types (lists, sets, and dictionaries) have comprehensions.  \n",
-    "2. While comprehensions are a power tool, it does become easier to write code that's difficult to read - especially with nested comprehension.  A key tenet in programming is to produce code that can be maintained - this requires that the code be readable and understood both by yourself and by others.  Using for-loops to created nested loops will most like be more easily understood."
+    "2. While comprehensions are a powerful tool, it does become easier to write code that's difficult to read - especially with nested comprehension.  A key tenet in programming is to produce code that can be maintained - this requires that the code be readable and understood both by yourself and by others.  Using for-loops to create nested collections will most likely be easiest to understood."
    ]
   },
   {
