--- a/IntroductionToPython/34-DateTime.ipynb
+++ b/IntroductionToPython/34-DateTime.ipynb
@@ -20,13 +20,13 @@
     "- 10/5/2005\n",
     "- 20051005\n",
     "\n",
-    "So many formats?  Which comes first - the day or the month?  do we start counting at 0 or at 1?   What about time zones?  Does  Arizona still not follow daylight savings time? Can't confuse coyotes. When did the cows in Indiana start following daylight savings time? Then there's leap years that occur every 4 years, except at the century mark, unless divisible by 400...  Then there's leap seconds.  When are those applied?  When was the last one applied?  Most of western civilization follows the Gregorian calendar, but what about dates prior to its introduction in 1582?  What do other civilizations use? \n",
+    "So many formats?  Which comes first - the day or the month? Do we start counting at 0 or at 1?   What about time zones?  Does  Arizona still not follow daylight savings time? Can't confuse coyotes. When did the cows in Indiana start following daylight savings time? Then there's leap years that occur every 4 years, except at the century mark, unless divisible by 400.  What about leap seconds?  When are those applied?  When was the last one applied?  Most of western civilization follows the Gregorian calendar, but what about dates prior to its introduction in 1582?  What do other civilizations use? \n",
     "\n",
-    "Most computer systems now track datetime based upon [Unix Epoch](https://en.wikipedia.org/wiki/Unix_time), which is the number of seconds since January 1st, 1970 at 00:00:00 UTC.   Some implementations will also use even finer grained representations such as milliseconds and nano seconds. Due to the size of most computer systems when this approach was adopted, the datetime type was track with a signed 32 bit integer which limits the acceptable date range from Dec 13, 1901 to January 19, 20238.  Using a 64 bit numbers in modern system means these limits are no longer a practical concern.  \n",
+    "Most computer systems track datetime based upon [Unix Epoch](https://en.wikipedia.org/wiki/Unix_time), which is the number of seconds since January 1st, 1970 at 00:00:00 UTC.   Some implementations will also use even finer grained representations such as milliseconds and nano seconds. Due to the size of most computer systems when this approach was adopted, the datetime type was represented with a signed 32 bit integer which limits the acceptable date range from Dec 13, 1901 to January 19, 20238.  Using a 64 bit numbers in modern systems means these limits are no longer a practical concern.  \n",
     "\n",
-    "Web page to see the current Epoch time and perform conversions: [https://currentmillis.com/](https://currentmillis.com/)\n",
+    "Reference: View current Epoch time and perform conversions: [https://currentmillis.com/](https://currentmillis.com/)\n",
     "\n",
-    "For string representations of dates and times, you should strive to follow [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601).  The format expresses dates and times from largest unit to the smallest unit. Python's datetime module uses the following format for ISO (though several alternatives exist): 2005-10-05T22:40:32.123456  (YYYYMMDDTHHmmSS.ssssss) where\n",
+    "For string representations of dates and times, you should strive to follow [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601).  The format expresses dates and times from largest unit to the smallest unit. Python's datetime module uses the following format for ISO (though several alternatives exist): 2005-10-05T22:40:32.123456+00:00  (YYYYMMDDTHHmmSS.sssuuu+00:00) where\n",
     "- YYYY: 4 digit year\n",
     "- MM: 2 digit month from 01 to 12\n",
     "- DD: 2 digit day from 01 to 31\n",
@@ -34,7 +34,8 @@
     "- HH: 2 digit hours from 00 to 23\n",
     "- mm: 2 digit minutes from 00 to 59\n",
     "- SS: 2 digit seconds from 00 to 59\n",
-    "- sssuuu: 3 digits for milliseconds and 3 digits for microsecods."
+    "- sssuuu: 3 digits for milliseconds and 3 digits for microseconds.\n",
+    "- +00:00: offset from the GMT/UTC timezone.  This value may be negative. Expressed in hours and then minutes."
    ]
   },
   {
@@ -43,7 +44,7 @@
    "metadata": {},
    "source": [
     "## The `datetime` Module\n",
-    "Python's `datetime` module provides functionality to support date and times.  The module defines four primary classes:\n",
+    "Python's `datetime` module provides functionality to support dates and times.  The module defines four primary classes:\n",
     "- `date`: represents just dates\n",
     "- `time`: represents time, but no dates.\n",
     "- `datetime`: represents the date and time together\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5c6ae3ad",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
    "id": "2f7a9743",
    "metadata": {},
    "source": [
-    "If you notice in the above code that the datetime objects do not have an associated timezone unless you explicitly specify one.  While `datetime.now()` returns the current time in the local timezone, the datetime object is not aware of that timezone by default.  Python considers calls these two types of datetime objects as aware and naive.  Aware datetime objects include timezone information.  Naive objects do not have timezone information.  Aware objects can unambiguously define a specific moment in time and can be computed relative to aware datetime objects.  A naive datetime object has neither of those two properties - the exact meaning of is left to the program.  The lesson - always use timezones when you work with datetime objects. \n",
+    "If you notice in the above code that the datetime objects do not have an associated timezone unless you explicitly specify one.  While `datetime.now()` returns the current time in the local timezone, the datetime object is not aware of that timezone by default.  Python considers these two types of datetime objects as aware and naive.  Aware datetime objects include timezone information.  Naive objects do not have timezone information.  Aware objects can unambiguously define a specific moment in time and can be computed relative to aware datetime objects.  A naive datetime object has neither of those two properties - the exact meaning of is left to the program.  The lesson - always use timezones when you work with datetime objects. \n",
     "\n",
     "The following code returns the local timezone as a `datetime.timezone` object."
    ]
@@ -269,10 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1a4d006b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-07-08 02:53:10.708352+00:00\n"
+     ]
+    }
+   ],
    "source": [
     "utc = dt.datetime.now(dt.timezone.utc)\n",
     "print(utc)"
@@ -317,7 +326,7 @@
    "source": [
     "In the following code, we'll use the zoneinfo package which was added to the Standard Library in 3.9.\n",
     "\n",
-    "With this module, we can instantiate timezone objects based upon a [time zone name](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones) - the available ones for Python can be found through `zoneinfo.available_timezones()`"
+    "With this module, we can instantiate timezone objects based upon a [time zone name](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones) - the available ones for Python can be found through `zoneinfo.available_timezones()`."
    ]
   },
   {
@@ -402,7 +411,6 @@
     "<tr class=\"row-odd\"><th class=\"head\"><p>Directive</p></th>\n",
     "<th class=\"head\"><p>Meaning</p></th>\n",
     "<th class=\"head\"><p>Example</p></th>\n",
-    "<th class=\"head\"><p>Notes</p></th>\n",
     "</tr>\n",
     "</thead>\n",
     "<tbody>\n",
@@ -410,14 +418,12 @@
     "<td><p>Year without century as a\n",
     "zero-padded decimal number.</p></td>\n",
     "<td><p>00, 01, …, 99</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%Y</span></code></p></td>\n",
     "<td><p>Year with century as a decimal\n",
     "number.</p></td>\n",
     "<td><p>0001, 0002, …, 2013,\n",
     "2014, …, 9998, 9999</p></td>\n",
-    "<td><p>(2)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%b</span></code></p></td>\n",
     "<td><p>Month as locale’s abbreviated\n",
@@ -429,7 +435,6 @@
     "(de_DE)</div>\n",
     "</div>\n",
     "</td>\n",
-    "<td><p>(1)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%B</span></code></p></td>\n",
     "<td><p>Month as locale’s full name.</p></td>\n",
@@ -440,32 +445,27 @@
     "Dezember (de_DE)</div>\n",
     "</div>\n",
     "</td>\n",
-    "<td><p>(1)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%m</span></code></p></td>\n",
     "<td><p>Month as a zero-padded\n",
     "decimal number.</p></td>\n",
     "<td><p>01, 02, …, 12</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%d</span></code></p></td>\n",
     "<td><p>Day of the month as a\n",
     "zero-padded decimal number.</p></td>\n",
     "<td><p>01, 02, …, 31</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%H</span></code></p></td>\n",
     "<td><p>Hour (24-hour clock) as a\n",
     "zero-padded decimal number.</p></td>\n",
     "<td><p>00, 01, …, 23</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%I</span></code></p></td>\n",
     "<td><p>Hour (12-hour clock) as a\n",
     "zero-padded decimal number.</p></td>\n",
     "<td><p>01, 02, …, 12</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%p</span></code></p></td>\n",
     "<td><p>Locale’s equivalent of either\n",
@@ -475,21 +475,16 @@
     "<div class=\"line\">am, pm (de_DE)</div>\n",
     "</div>\n",
     "</td>\n",
-    "<td><p>(1),\n",
-    "(3)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%M</span></code></p></td>\n",
     "<td><p>Minute as a zero-padded\n",
     "decimal number.</p></td>\n",
     "<td><p>00, 01, …, 59</p></td>\n",
-    "<td><p>(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%S</span></code></p></td>\n",
     "<td><p>Second as a zero-padded\n",
     "decimal number.</p></td>\n",
     "<td><p>00, 01, …, 59</p></td>\n",
-    "<td><p>(4),\n",
-    "(9)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%z</span></code></p></td>\n",
     "<td><p>UTC offset in the form\n",
@@ -500,18 +495,15 @@
     "-0400, +1030,\n",
     "+063415,\n",
     "-030712.345216</p></td>\n",
-    "<td><p>(6)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-even\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%Z</span></code></p></td>\n",
     "<td><p>Time zone name (empty string\n",
     "if the object is naive).</p></td>\n",
     "<td><p>(empty), UTC, GMT</p></td>\n",
-    "<td><p>(6)</p></td>\n",
     "</tr>\n",
     "<tr class=\"row-odd\"><td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">%%</span></code></p></td>\n",
     "<td><p>A literal <code class=\"docutils literal notranslate\"><span class=\"pre\">'%'</span></code> character.</p></td>\n",
     "<td><p>%</p></td>\n",
-    "<td></td>\n",
     "</tr>\n",
     "</tbody>\n",
     "</table>\n",
@@ -597,7 +589,7 @@
     "# Date arithimetic \n",
     "print(now.add(days=2))\n",
     "\n",
-    "# Definining a duration\n",
+    "# Definining a duration  (length of time)\n",
     "dur = pendulum.duration(days=10, hours=5)\n",
     "print(dur)\n",
     "print(\"dur.weeks:\",dur.weeks)\n",
@@ -686,19 +678,21 @@
    "metadata": {},
    "source": [
     "## Studying the Python Source Code\n",
-    "- immutable, uses `__new__` not `__init__`\n",
-    "- validates parameters \n",
-    "  - must be integers which the call to `_index()` enforces\n",
-    "  - in the appropriate ranges. days in month is checked\n",
-    "- offset the days_in_months array to make indexing faster\n",
-    "- hash computation is lazily initialized\n",
-    "- docstrings\n",
-    "- property methods\n",
-    "- chain constructors w/ the class factory methods\n",
-    "- sanity check of assert in \\_days_in_month. The month check should have already occured in the prior code.\n",
-    "- type checking in `__sub__`\n",
-    "Source: https://github.com/python/cpython/blob/main/Lib/datetime.py\n",
-    "Note: the following code is not complete.."
+    "One way to improve your program is to study the source code of other people. The difficulty with this approach, though, is finding good examples. The various application programming interfaces (APIs) that are delivered with programming languages are a good places to study code. Typically these APIs have been implemented by multiple developers and undergone a rigorous review process to be included in the language's distribution.\n",
+    "\n",
+    "In the following code block, we have copied in portions of Python's datetime module to examine how the class was implemented.  Within this class, the developers made many interesting choices.\n",
+    "\n",
+    "1. The `datetime` class is immutable.  As such, the class uses  `__new__` not `__init__` to initialize the object's state. \n",
+    "2. The class validates parameters to `__new__`. The date fields are appropriately checked that they are within the expected bounds (e.g., month between 1 and 12). The call to `_index()` enforces that the parameters are integers.\n",
+    "3. The days_in_months array has been offset by 1. In other words, the array has a dummy values at index 0.  This avoids having to subtract one everytime the array used.\n",
+    "4. The function `_days_in_month` has an assertion that used as a sanity check to ensure the month value is in the correct range.  Based upon the logic, this check does occur before any call to `_days_in_month`.  The assertion provides an additional safety net.\n",
+    "5. The hash value is lazily initialized. By lazy, the hash value is not actually calculated until the first time it is need for an object. After that the computed value is stored and used for any subsequent calls.\n",
+    "6. The class defines property methods to access the various attributes\n",
+    "7. The class defines static constructors.  These constructors call each other. This pattern reduces the amount of code needed to support multiple ways to define an object.  The pattern also allows for constructors with different arguments to be used.\n",
+    "8. The developers used docstrings for the class itself and then for the different methods within the class.\n",
+    "9. The `__sub__` method checks the type of arguments passed and alters its behavior based upon those types.\n",
+    "\n",
+    "Source: https://github.com/python/cpython/blob/main/Lib/datetime.py\n"
    ]
   },
   {
