--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -9,29 +9,29 @@
     "\n",
     "# Preliminaries\n",
     "\n",
-    "Congratulations on making it to this point where you can now view, edit and run [Jupyter Notebooks](https://jupyter.org/) within Jupyter Lab.\n",
+    "Congratulations on reaching this point where you can now view, edit and run [Jupyter Notebooks](https://jupyter.org/) within Jupyter Lab.\n",
     "\n",
     "The course uses Jupyter notebooks for lectures, code demonstrations, and exercises.  You should run these notebooks yourself. Do not be afraid to make changes, try different code snippets than what is provided, and experiment.\n",
     "\n",
-    "The Jupyter environment follows a very familiar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  Jupyter notebooks are composed of a sequence of cells.  Each of those cells, can either be code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell), instructions or exercises to perform. \n",
+    "The Jupyter environment follows a very familiar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  Jupyter notebooks are composed of a sequence of cells.  Each of those cells can either be programming code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell), instructions, or exercises to perform. \n",
     "\n",
     "A particular cell can be in one of two modes:\n",
     "1. Command\n",
     "2. Edit\n",
     "\n",
     "In either of these modes:\n",
-    " * <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell, and select the cell below \n",
-    " * <span class=\"keys\"><kbd class=\"key-alt\">Alt</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell, and insert a cell below \n",
+    " * <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell and select the cell below \n",
+    " * <span class=\"keys\"><kbd class=\"key-alt\">Alt</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell and insert a cell below \n",
     " * <span class=\"keys\"><kbd class=\"key-shift\">Ctrl</kbd><span>+</span><kbd class=\"key-s\">s</kbd></span> Saves the current notebook  (<span class=\"keys\"><kbd class=\"key-shift\">Command(⌘)</kbd><span>+</span><kbd class=\"key-s\">s</kbd></span> on a Mac)\n",
     "\n",
     "In the command mode:\n",
     "* To see all shortcuts, type <kbd class=\"key-h\">H</kbd>\n",
-    "* Switch to the edit mode by click the mouse on the cell or typing <kbd class=\"key-enter\">Enter</kbd>\n",
+    "* Switch to the edit mode by clicking the mouse on the cell or typing <kbd class=\"key-enter\">Enter</kbd>\n",
     "* Use the up and down arrow keys to move among the cells\n",
     "* Press <kbd class=\"key-a\">a</kbd> to insert a cell above the current one\n",
     "* Press <kbd class=\"key-b\">b</kbd> to insert a cell below the current one\n",
-    "* To change the cell type to markdown, press <kbd class=\"key-m\">m</kbd>\n",
-    "* To change the cell type to code, press <kbd class=\"key-y\">y</kbd>\n",
+    "* To change the cell's type to markdown, press <kbd class=\"key-m\">m</kbd>\n",
+    "* To change the cell's type to code, press <kbd class=\"key-y\">y</kbd>\n",
     "\n",
     "In the edit mode:\n",
     "* Press <kbd class=\"key-esc\">Esc</kbd> to go into the command mode\n",
@@ -44,15 +44,15 @@
    "metadata": {},
    "source": [
     "Displaying Line Numbers:<br>\n",
-    "Jupyter allows line numbers to be shown by default.\n",
+    "Jupyter can display line numbers by default.\n",
     "\n",
-    "For JupyterLab,  from the \"Settings\" menu, select \"Advanced Settings Editor\". Select \"Notebook\" from along the left-hand side. Then click \"Show Line Numbers\".\n",
+    "For JupyterLab,  from the \"Settings\" menu, select \"Advanced Settings Editor\". Next, select \"Notebook\" from along the left-hand side. Then click \"Show Line Numbers\".\n",
     "\n",
     "![](images/lineNumbers.png)\n",
     "<p>\n",
     "For \"classic\" Jupyter, select the \"View\" menu and then \"Toggle Line Numbers\".   \n",
     "<p>\n",
-    "If you are running notebooks with VS Code, press <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-l\">l</kbd></span> while in command mode.  You can also press the Settings icon(the gear) in the upper right hand corner and then \"Show Notebook Line Numbers\"."
+    "If you execute notebooks within VS Code, press <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-l\">l</kbd></span> while in command mode.  You can also press the Settings icon (the gear) in the upper right-hand corner and then \"Show Notebook Line Numbers\"."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "## Install Dependencies\n",
-    "To ensure the required dependencies are installed for these notebooks, execute the following cell."
+    "To ensure your Python environment has the required dependencies installed for these notebooks, execute the following cell."
    ]
   },
   {
@@ -82,26 +82,28 @@
    "id": "d6e6c4a9",
    "metadata": {},
    "source": [
-    "The output of the previous cell depends upon whether or not you already have various modules installed.  \n",
+    "The last cell's output depends upon whether you already have various modules installed.  \n",
     "\n",
-    "The first line allows the script(program) utilize the `sys` module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page appears overwhelming.  We will explain the usages of various application program interfaces (APIs) as we go through this course.\n",
+    "The first line allows the script(program) utilize the `sys` module, which provides access to various parameters and settings used by the python interpreter.\n",
     "\n",
-    "The second line ensures that the latest version of the Python package manager(`pip`) and associated tools are installed with their latest versions.\n",
+    "The second line ensures that the Python environment has the latest versions of the Python package manager(`pip`) and associated tools.\n",
     "\n",
-    "The third line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  The line then uses the `pip` module to install the latest version of the packages listed in the requirements.txt file.  (`pip` can also be executed as a command-line program.)  Any dependencies required by those packages will also be installed - so the output contains references to pandas, beautifulsoup4, soupsieve and other libraries.\n",
+    "The third line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  The line then uses the `pip` module to install the latest version of the packages listed in the requirements.txt file.  (Programmers can also run `pip` as a command-line program.)  `pip` will install any dependencies required by those packages - so the output contains references to pandas, beautifulsoup4, soupsieve, and other libraries.\n",
     "\n",
-    "For those familiar with Python, you may be asking why not just execute `!pip install google`.  The short answer is that if the Python interpreter runs within a different `venv` than what the Jupyter server does, the dependency will be installed into the wrong location.  Jake VanderPlas describes this on [his blog in much greater detail](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/).  Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST) which you may want to examine."
+    "For those familiar with Python, you may ask why not just execute `!pip install google`.  The short answer is that if the Python interpreter runs within a different virtual environment than the Jupyter server, pip will install the dependency in the wrong location. For more information, Jake VanderPlas describes this on [his blog in much greater detail](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/). In addition,\n",
+    "Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST), which you may want to examine."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c630ca36-dc21-440b-b34c-dfc236d8037e",
    "metadata": {},
    "source": [
     "## Notebook Conventions\n",
-    "For each of the notebooks, run the code cells from top to bottom.\n",
+    "For each notebook, run the code cells from top to bottom.\n",
     "\n",
-    "Some of the notebook cells are designed to cause errors when executed.  In some cases, these errors are only meant to show you specific output.  Other times you should make corrections until the code executes correctly.  Other cells have been left blank for you to enter code.  \n",
+    "We did design some of the notebook cells to cause errors when executed. Sometimes, these errors just display specific output for your awareness. Other times you should make corrections until the code runs correctly.  Some cells are blank for you to enter code.  \n",
     "\n",
     "Hyperlinks exist to outside resources throughout these notebooks. Unless explicitly mentioned, these links provide background information and are not essential."
    ]
