--- a/IntroductionToPython/30-Preconditions,Postconditions,Invariants,andAssertions.ipynb
+++ b/IntroductionToPython/30-Preconditions,Postconditions,Invariants,andAssertions.ipynb
@@ -15,15 +15,15 @@
     "* Outputs from the routine\n",
     "* Pseudocode (steps in the routine)\n",
     "\n",
-    "We can add a couple of additional items: _preconditions_ to the routine and _postconditions_ of the routine.\n",
+    "We can add two additional items: _preconditions_ to the routine and _postconditions_ of the routine.\n",
     "\n",
-    "_Preconditions_ are conditions guaranteed to be true before the routine.  This includes things such as inputs being in appropriate ranges and files initialized and ready for input/output. _Preconditions_ are the client code's obligations to the routine that it calls.  For example, if we are creating a shape such as a circle or a square, the radius or side length needs to a non-negative number. As we write code, we should check that these preconditions hold.  If not, then an appropriate error handling technique such as logging the issue, return an error code, or raising an exception.\n",
+    "_Preconditions_ are conditions guaranteed to be true before the routine.  This includes things such as inputs being in appropriate ranges and files initialized and ready for input/output. _Preconditions_ are the client code's obligations to the routine that it calls.  For example, if we create a shape such as a circle or a square, the radius or side length needs to a non-negative number. As we write code, we should check that these preconditions hold.  If not, then an appropriate error handling technique needs to be performed such as logging the issue, returning an error code, or raising an exception.\n",
     "\n",
-    "_Postconditions_ are the conditions(items) guaranteed to be true before control is passed back to the caller.  This is the routine's/class's obligation to the code that uses it. For example, if a routine add an element to a list, a post-condition is that the list is not empty.  Or more strongly, that the length of a list is one more than length of the list when the routine started.\n",
+    "_Postconditions_ are the conditions(items) guaranteed to be true before control is passed back to the caller.  This is the routine's/class's obligation to the code that uses it. For example, if a routine adds an element to a list, a post-condition is that the list is not empty.  Or more strongly, that the length of a list is one more than length of the list when the routine started.\n",
     "\n",
-    "_Invariants_ are a set of conditions(assumptions) that must always hold true during the life of a program (or more narrowly, by the life of an object).  You can consider this to be a combined precondition and postcondition - it must be valid before and after a call to a method. However, it may not necessarily be true when execute a routine that changes the relevant state/attributes for the condition.  For objects, invariants should hold from the end of the constructor until the object is destroyed.  As an example, the radius of a circle must always be non-negative.  The term invariant can also be applied to a sequence of operations.  In this situation, it is the set of conditions that remain true during these operations.\n",
+    "_Invariants_ are a set of conditions(assumptions) that must always hold true during the life of a program (or more narrowly, by the life of an object).  You can consider this to be a combined precondition and postcondition - it must be valid before and after a call to a method. However, it may not necessarily be true when executing a routine that changes the relevant state/attributes for the condition.  For objects, invariants should hold from the end of the constructor until the object is destroyed.  As an example, the radius of a circle must always be non-negative.  The term invariant can also be applied to a sequence of operations.  In this situation, it is the set of conditions that remain true during these operations.\n",
     "\n",
-    "_Assertions_ are a series of statements used during development that allows a program to check itself as it runs.  _Assertions_ are sanity checks that conditions hold true.  We use _assertions_ to document assumptions into the code.  _Assertions_ are primarily meant as a development/debugging tool - it is possible to turn off these completely.  As such any critical checks (data validation, authorization) should not be contained in an assert statement.\n"
+    "_Assertions_ are a series of statements used during development that allows a program to check itself as it runs.  _Assertions_ are sanity checks that conditions hold true.  We use _assertions_ to document assumptions into the code.  _Assertions_ are primarily meant as a development/debugging tool - it is possible to turn off these checks completely.  As such any critical checks (data validation, authorization) should not be contained in an assert statement."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "    amount = num_shares * price_per_share + commission_charge - bonus_offer\n",
     "    return amount\n",
     "</pre>\n",
-    "However, what happens if <code>bonus_offer > num_shares * price_per_share + commission_charge</code>? Do we owe money to the client as a result of the client buying stocks?  In this situation, we need an assertion that the amount is positive.  We could also add another assertion that the amount is less than or equal to the <code>num_shares * price_per_share + commission_charge</code>. (This covers a negative values passed in `bonus_offer`.)"
+    "However, what happens if <code>bonus_offer > num_shares * price_per_share + commission_charge</code>? Do we owe money to the client as a result of the client buying stocks?  In this situation, we need an assertion that the amount is positive.  We could also add another assertion that the `amount` is less than or equal to the <code>num_shares * price_per_share + commission_charge</code>. (This covers a negative values passed in `bonus_offer`.)"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "source": [
     "The coworker had not fully considered all of the potential side issues the change may have.  While this is relatively simple, similar types of problems occur in much more complex situations.  By using the assert, we at least have some sanity check in place.  Our testing may or may not have found this particular situation.\n",
     "\n",
-    "In looking at the 'Circle' class, we applied name mangling to highlight that developer's shouldn't directly change the values, but we can create a more robust situation by validating the radius whenever it is changed.  In this solution, we establish a getter and setter property for radius. The radius setter always validates that its value is non-negative."
+    "In looking at the 'Circle' class, we applied name mangling to highlight that developers shouldn't directly change the values, but we can create a more robust situation by validating the radius whenever it is changed.  In this solution, we establish a getter and setter property for radius. The radius setter always validates that its value is non-negative."
    ]
   },
   {
